fixed slider overflow

--- a/css/bill.css
+++ b/css/bill.css
@@ -68,7 +68,13 @@ a.in-progress{
   and (max-device-width: 667px) 
   and (-webkit-min-device-pixel-ratio: 2)
   and (orientation: portrait) { 
-
+    .mobile-container {
+        width: 100%;
+        padding-right: 10px;
+        padding-left: 10px;
+        margin-right: auto;
+        margin-left: auto;
+    }
 }
 
 /* Landscape */
@@ -97,7 +103,13 @@ a.in-progress{
   and (max-device-width: 736px) 
   and (-webkit-min-device-pixel-ratio: 3)
   and (orientation: portrait) { 
-
+    .mobile-container {
+        width: 100%;
+        padding-right: 10px;
+        padding-left: 10px;
+        margin-right: auto;
+        margin-left: auto;
+    }
 }
 
 /* Landscape */
@@ -126,7 +138,13 @@ a.in-progress{
   and (max-device-width: 812px) 
   and (-webkit-min-device-pixel-ratio: 3)
   and (orientation: portrait) { 
-
+    .mobile-container {
+        width: 100%;
+        padding-right: 10px;
+        padding-left: 10px;
+        margin-right: auto;
+        margin-left: auto;
+    }
 }
 
 /* Landscape */
