--- a/css/style.css
+++ b/css/style.css
@@ -377,7 +377,6 @@ label {
 }
 .silder-content h1 {
 	font-size: 55px;
-	font-weight: 800;
 	padding-right: 25px;
 	text-transform: capitalize;
 }
